jSparrow refactoring