@@ -34,7 +34,8 @@ import org.slf4j.LoggerFactory;
 import java.util.ArrayList;
 import java.util.List;
 
-/** A  file handler for .obo files
+/**
+ * A file handler for .obo files
  *
  * @author Andreas Prlic
  *
@@ -43,43 +44,63 @@ public class OboFileHandler implements OboFileEventListener {
 
 	private static final Logger logger = LoggerFactory.getLogger(OboFileEventListener.class);
 
-	Ontology ontology;
-	List<Term> termStack ;
+	public static final String TERM = "Term";
 
-	public static final String TERM        = "Term";
-	public static final String TYPEDEF     = "Typedef";
-	public static final String ONTOLOGY    = "ontologys";
-	public static final String ID_KEY      = "id";
-	public static final String SYNONYM     = "synonym";
-	public static final String EXACT_SYNONYM  = "exact_synonym";
-	public static final String BROAD_SYNONYM  = "broad_synonym";
+	public static final String TYPEDEF = "Typedef";
+
+	public static final String ONTOLOGY = "ontologys";
+
+	public static final String ID_KEY = "id";
+
+	public static final String SYNONYM = "synonym";
+
+	public static final String EXACT_SYNONYM = "exact_synonym";
+
+	public static final String BROAD_SYNONYM = "broad_synonym";
+
 	public static final String NARROW_SYNONYM = "narrow_synonym";
+
 	public static final String REL_SYNONYM = "related_synonym";
-	public static final String NAME        = "name";
-	public static final String DEF         = "def";
+
+	public static final String NAME = "name";
+
+	public static final String DEF = "def";
+
 	public static final String XREF_ANALOG = "xref_analog";
-	public static final String COMMENT     = "comment";
-	public static final String IS_A        = "is_a";
+
+	public static final String COMMENT = "comment";
+
+	public static final String IS_A = "is_a";
+
 	public static final String IS_OBSOLETE = "is_obsolete";
+
 	public static final String RELATIONSHIP = "relationship";
+
 	public static final String DISJOINT_FROM = "disjoint_from";
-	public static final String SUBSET       = "subset";
+
+	public static final String SUBSET = "subset";
+
 	public static final String INTERSECTION_OF = "intersection_of";
+
 	public static final String NAMESPACE = "namespace";
+
 	public static final String REPLACED_BY = "replaced_by";
 
+	public static final String ALT_ID = "alt_id";
 
-	public static final String ALT_ID      = "alt_id";
+	Ontology ontology;
 
-	boolean isTerm ;
+	List<Term> termStack;
+
+	boolean isTerm;
 
 	private Term currentTerm;
 
-	public OboFileHandler(Ontology ontology){
-		this.ontology = ontology ;
+	public OboFileHandler(Ontology ontology) {
+		this.ontology = ontology;
 
-		//Term isa = onto.importTerm(OntoTools.IS_A, null);
-		//Term partof = onto.importTerm(OntoTools.PART_OF, null);;
+		// Term isa = onto.importTerm(OntoTools.IS_A, null);
+		// Term partof = onto.importTerm(OntoTools.PART_OF, null);;
 
 	}
 
@@ -91,7 +112,7 @@ public class OboFileHandler implements OboFileEventListener {
 
 	@Override
 	public void documentStart() {
-		termStack = new ArrayList<Term>();
+		termStack = new ArrayList<>();
 	}
 
 	@Override
@@ -101,8 +122,8 @@ public class OboFileHandler implements OboFileEventListener {
 
 	@Override
 	public void newStanza(String stanza) {
-		//logger.info("got a new stanza: {}", stanza);
-		if ( stanza.equals(TERM)){
+		// logger.info("got a new stanza: {}", stanza);
+		if (stanza.equals(TERM)) {
 			isTerm = true;
 			currentTerm = null;
 		} else {
@@ -115,12 +136,12 @@ public class OboFileHandler implements OboFileEventListener {
 	public void newKey(String key, String value) {
 		if (isTerm) {
 
-			if ( key.equals(ID_KEY)) {
-				if ( ontology.containsTerm(key)){
+			if (key.equals(ID_KEY)) {
+				if (ontology.containsTerm(key)) {
 					currentTerm = ontology.getTerm(key);
 				} else {
 					try {
-						if (  ontology.containsTerm(value)) {
+						if (ontology.containsTerm(value)) {
 							currentTerm = ontology.getTerm(value);
 						} else {
 							currentTerm = ontology.createTerm(value);
@@ -136,59 +157,55 @@ public class OboFileHandler implements OboFileEventListener {
 				logger.warn("did not find ID for Term! ");
 				return;
 			}
-			if (key.equals(NAMESPACE)){
+			if (key.equals(NAMESPACE)) {
 				Annotation anno = currentTerm.getAnnotation();
 				anno.setProperty(NAMESPACE, value);
-			}
-			else if (key.equals(NAME)){
+			} else if (key.equals(NAME)) {
 				currentTerm.setDescription(value);
-			} else if (key.equals(DEF)){
-				//TODO
+			} else if (key.equals(DEF)) {
+				// TODO
 				// set definition
 				Annotation anno = currentTerm.getAnnotation();
 				anno.setProperty(DEF, value);
-			} else if (key.equals(XREF_ANALOG)){
+			} else if (key.equals(XREF_ANALOG)) {
 				// set xref analog
 				Annotation anno = currentTerm.getAnnotation();
 				anno.setProperty(XREF_ANALOG, value);
 			} else if (key.equals(IS_OBSOLETE)) {
 				// ignore obsolete Terms...
-				//logger.info("obsolete: {}", currentTerm);
+				// logger.info("obsolete: {}", currentTerm);
 				Annotation anno = currentTerm.getAnnotation();
-				anno.setProperty(IS_OBSOLETE, new Boolean(true));
+				anno.setProperty(IS_OBSOLETE, Boolean.valueOf(true));
 
-			} else if (key.equals(IS_A) ||
-					key.equals(RELATIONSHIP) ||
-					key.equals(DISJOINT_FROM) ||
-					key.equals(INTERSECTION_OF) ||
-					key.equals(SUBSET)) {
+			} else if (key.equals(IS_A) || key.equals(RELATIONSHIP) || key.equals(DISJOINT_FROM)
+					|| key.equals(INTERSECTION_OF) || key.equals(SUBSET)) {
 				try {
-					Term object = (ontology.containsTerm(value) ?
-							ontology.getTerm(value): ontology.createTerm(value));
+					Term object = (ontology.containsTerm(value) ? ontology.getTerm(value) : ontology.createTerm(value));
 					Term predicate = (ontology.containsTerm(key) ? ontology.getTerm(key) : ontology.createTerm(key));
-					ontology.createTriple(currentTerm, object, predicate, currentTerm + " " + predicate + " " + object, key+"-relationship");
+					ontology.createTriple(currentTerm, object, predicate, new StringBuilder().append(currentTerm)
+							.append(" ").append(predicate).append(" ").append(object).toString(),
+							key + "-relationship");
 				} catch (AlreadyExistsException ex) {
+					logger.error(ex.getMessage(), ex);
 				}
 
-			} else if (key.equals(COMMENT)){
+			} else if (key.equals(COMMENT)) {
 				Annotation anno = currentTerm.getAnnotation();
 				anno.setProperty(COMMENT, value);
-			} else if (key.equals(ALT_ID)){
+			} else if (key.equals(ALT_ID)) {
 				Annotation anno = currentTerm.getAnnotation();
 				anno.setProperty(ALT_ID, value);
-			}
-			else if (key.equals(REPLACED_BY)) {
+			} else if (key.equals(REPLACED_BY)) {
 				Annotation anno = currentTerm.getAnnotation();
 				anno.setProperty(REPLACED_BY, value);
 			}
 
 			else {
-				//logger.info("unknown key {}", key);
+				// logger.info("unknown key {}", key);
 			}
 
-
 		} else {
-			//logger.info("not a term and ignoring: {}->{}", key, value);
+			// logger.info("not a term and ignoring: {}->{}", key, value);
 		}
 
 	}
